--- a/res/layout/image_detail_fragment.xml
+++ b/res/layout/image_detail_fragment.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
-    <com.example.android.bitmapfun.ui.CustomAsyncImageView
+    <com.example.android.bitmapfun.bitmaputils.RecyclingImageView
         android:id="@+id/imageView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
